--- a/src/css/video.module.css
+++ b/src/css/video.module.css
@@ -1,8 +1,3 @@
-.videoContainer {
-  width: 100%;
-  aspect-ratio: 16/9;
-}
-
 .video {
   width: 100%;
   aspect-ratio: 16/9;
